2010-01-04  Romain Francois <francoisromain@free.fr>

	* src/Rcpp/wrap.h: wrap no more a template. this was not a good
	idea as it prevented implicit conversion to SEXP behavior when 
	wrap'ing a RObject.

	* src/Rcpp/Environment.h: added the remove method
	
	* src/unitTests/runit.environments.R: remove unit test

	* src/unitTests/runit.Language.R: remove verbose=TRUE in cfunction
	call (generated noise)

	* src/wrap.cpp: added a few missing PROTECT 
	
2010-01-04  Dirk Eddelbuettel  <edd@debian.org>

	* src/excections.cpp: Get rid of another unused variable
	* src/RcppCommon.cpp: Idem

2010-01-03  Romain Francois <francoisromain@free.fr>

	* src/Rcpp/Environment.h: Environment gains the parent
	method that returns the parent environment

	* src/Rcpp/as.h: template as<> to convert SEXP to classic
	C++ types, fcactored out of RObject

	* src/as.cpp: specific implementations. as<int>, as<bool>
	as<string>, ...

	* inst/unitTests/runit.as.R: unit tests

	* src/Rcpp/wrap.h : factored out from RObject. there is now a
	template wrap in addition to the specific implementations. The
	template generates a warning and return NULL

	* src/wrap.cpp: specific implementations of the wrap template
	(factored out of RObject)

	* src/Rcpp/pairlist.h : variadic templates to
	recursively generate a pairlist
	(CAR and CDR) from any number of "wrap("'able objects.
	(factored out of Language)

	* src/pairlist.cpp: end of recursion for the above

	* src/Rcpp/grow.h : grow a pairlist with any wrappable
	object. Used in pairlist

	* src/grow.cpp : specific implementation for Named object
	to allow tagging the head of the pairlist.

	* src/Rcpp/Named.h : new class Named that is used to specify
	named elements in a pairlist.

	* src/Named.cpp: implementation

	* src/Rcpp/RObject.h: added wrap(const char* const) RObject factory
	method

	* src/Rcpp/RObject.h: rework the garbage collection mechanism so that
	it is automatic and hidden. methods preserve and release are now